fix: bug with body display on smaller screens
header and nav overlapped causing whole page
shrink improperly on smaller screens

--- a/style.css
+++ b/style.css
@@ -411,3 +411,14 @@ footer > .link-list a {
 .socialmedia-icon {
   width: 25px;
 }
+
+@media (max-width: 600px) {
+  .nav-list,
+  header {
+    flex-direction: column;
+  }
+  header {
+    gap: 5rem;
+    margin-bottom: 0;
+  }
+}
